work on #24 setup testing environment, #17 work on tests

--- a/Assets/Tests/EditorTests/EditorTests.asmdef
+++ b/Assets/Tests/EditorTests/EditorTests.asmdef
@@ -1,9 +1,36 @@
 {
     "name": "EditorTests",
-    "optionalUnityReferences": [
-        "TestAssemblies"
+    "rootNamespace": "",
+    "references": [
+        "AYellowpaper.SerializedCollections",
+        "Ink-Libraries",
+        "InkEditor",
+        "Unity.InputSystem",
+        "Unity.InputSystem.TestFramework",
+        "Unity.InputSystem.ForUI",
+        "UnityEngine.TestRunner",
+        "UnityEditor.TestRunner",
+        "Unity.Mathematics",
+        "Unity.Mathematics.Editor",
+        "Unity.TextMeshPro",
+        "Unity.TextMeshPro.Editor",
+        "Main",
+        "DOTween.Modules",
+        "Unity.VisualStudio.Editor"
     ],
     "includePlatforms": [
         "Editor"
-    ]
+    ],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": true,
+    "precompiledReferences": [
+        "nunit.framework.dll"
+    ],
+    "autoReferenced": false,
+    "defineConstraints": [
+        "UNITY_INCLUDE_TESTS"
+    ],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
