--- a/Assets/Tests/UnitTests/UnitTests.asmdef
+++ b/Assets/Tests/UnitTests/UnitTests.asmdef
@@ -1,6 +1,34 @@
 {
     "name": "UnitTests",
-    "optionalUnityReferences": [
-        "TestAssemblies"
-    ]
+    "rootNamespace": "",
+    "references": [
+        "AYellowpaper.SerializedCollections",
+        "Ink-Libraries",
+        "InkEditor",
+        "UnityEngine.TestRunner",
+        "UnityEditor.TestRunner",
+        "Unity.InputSystem.ForUI",
+        "Unity.InputSystem",
+        "Unity.InputSystem.TestFramework",
+        "Main",
+        "DOTween.Modules",
+        "Unity.Mathematics",
+        "Unity.Mathematics.Editor",
+        "Unity.TextMeshPro.Editor",
+        "Unity.TextMeshPro",
+        "Unity.VisualStudio.Editor"
+    ],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": true,
+    "precompiledReferences": [
+        "nunit.framework.dll"
+    ],
+    "autoReferenced": false,
+    "defineConstraints": [
+        "UNITY_INCLUDE_TESTS"
+    ],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
