--- a/Assets/Tests/UnitTests/UnitTests.asmdef
+++ b/Assets/Tests/UnitTests/UnitTests.asmdef
@@ -23,7 +23,8 @@
     "allowUnsafeCode": false,
     "overrideReferences": true,
     "precompiledReferences": [
-        "nunit.framework.dll"
+        "nunit.framework.dll",
+        "Moq.dll"
     ],
     "autoReferenced": false,
     "defineConstraints": [
