--- a/Assets/Scripts/PsychOutDestined.asmdef
+++ b/Assets/Scripts/PsychOutDestined.asmdef
@@ -13,7 +13,9 @@
         "GUID:d8b63aba1907145bea998dd612889d6b",
         "GUID:329b4ccd385744985bf3f83cfd77dfe7",
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
-        "GUID:6546d7765b4165b40850b3667f981c26"
+        "GUID:6546d7765b4165b40850b3667f981c26",
+        "GUID:3a9781db4804a9945b9883f3a7c46d45",
+        "GUID:613783dc1674e844b87788ea74ede0f6"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
